--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,11 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.qr-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #d5e1ef;
+}
