--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,11 @@ img {
   height: 100vh;
   background-color: #d5e1ef;
 }
+
+.qr-container__card {
+  max-width: 320px;
+  background-color: #ffffff;
+  padding: 16px 16px 40px 16px;
+  border-radius: 20px;
+  font-family: Outfit;
+}
