--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,11 @@ img {
   margin: 0px 0px 16px 0px;
   color: #1f314f;
 }
+
+.qr-container__card__text {
+  font-size: 1rem;
+  line-height: 1.4;
+  letter-spacing: 0.0125rem;
+  color: #68778d;
+  padding: 0px 16px;
+}
