--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ img {
   border-radius: 20px;
   font-family: Outfit;
   text-align: center;
+  box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.04);
 }
 
 .qr-container__card__img {
